Fixed flex wrapfor phone and smaller screen view

--- a/public/style.css
+++ b/public/style.css
@@ -90,6 +90,7 @@ aside {
     height: calc(100vh - 70px);
     display: flex;
     flex-grow: 1;
+    flex-wrap: wrap;
    /* grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
     grid-template-areas: "cakeform entrylist"; */
@@ -98,6 +99,7 @@ aside {
   main section {
    /*  grid-area: cakeform; */
     display: flex;
+    min-width: 400px;
     flex-grow: 1;
     justify-content: center;
     align-items: center;
@@ -156,10 +158,16 @@ option:disabled {
   color: #F2B989;
 }
 
+.btnContainer {
+  display: flex;
+  right: 0;
+}
+
 aside {
   /* grid-area: entrylist; */
   display: flex;
   flex-grow: 1;
+  min-width: 300px;
   padding: 1em;
   overflow-y: scroll;
   border-radius: 20px;
@@ -174,17 +182,27 @@ aside {
   display: flex;
   flex-direction: column;
   list-style: none;
+  flex-grow: 1;
   margin-block-start: 0;
   padding: 0;
   flex-grow: 1;
 }
 
+#entryList ul{
+  display: flex;
+  flex-grow: 1;
+  width: 100%;
+}
+
 #entrylist li {
-  width: 100rem;
-  flex-shrink: 1;
+  /* width: 100%; */
+  /* flex-shrink: 1; */
+  justify-content: space-between;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  align-items: center;
+  align-content: space-between;
+  /* justify-content: flex-start; */
   padding: 1em;
   margin-bottom: 1em;
   border-radius: 10px;
